--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 }
 
 dependencies {
+    implementation 'io.github.shashank02051997:FancyToast:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.google.android.material:material:1.3.0'
@@ -46,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.github.florent37:expansionpanel:1.2.4'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
